    mix'.
10. Remove use of custom select library, its breaking too many things.
11. Fix file selector buttons not added on subsequent showing of 'Server'
    settings.
12. Fix SVG icon colour in 'Extras', 'Server' settings, and extra player
    settings pages.
13. Add icon mapping for 'WiiM Player'.
14. Fix progress bar in desktop layout when used on mobile and coloured
    toolbars.

5.7.0
-----
 1. Use LMS 9.0.1's 'isClassical' attribute to determine if composer, conductor,
    and/or band should be shown (when relevant option is enabled) - instead of
    using Material specific genre lists.
 2. For remote streams, if genre(s) is empty/undefined then show composer,
    conductor, or band if relevant option is enabled (i.e. skip genre check).
 3. Group album tracks by works, or other groupings.
 4. Add grouping support to album style queue.
 5. Sans-serif 'i' for info icon in navigation drawer.
 6. Overlay small update/restart icon over info icon as per menu icon.
 7. Fix hiding of 'Server' settings entry if using icons in navigation drawer
    and a password has been set.
 8. Fix showing multiple artists for albums on touch devices with links
    disabled.
 9. Add missing border to bottom of server settings pages.
10. Add 'Show image' after 'Copy details' for items with an image.
11. Darken subtoolbar background (when using cover) for dark themes.
12. Save/restore pin queue and MAI zoom/tabs/lyrics settings when
    saving/restoring defaults.

5.6.0
-----
 1. Keep navigation drawer titlebar visible, and only scroll contents.
 2. Move 'Information' into navigation drawer titlebar.
 3. Custom MAI icons.
 4. Use block 'i' icon for 'Information' in navigation drawer titlebar.
 5. Add option to show settings actions as a row of icons.
 6. Add option to always show settings (and shortcut) actions.
 7. Add 'Alt+F' as shortcut for 'Advanced search'.
 8. If at top-level then Ctr+F should always open 'Search library', even if 'My
    Music' is hidden.